--- a/web/views/ag_base/backend.html.twig
+++ b/web/views/ag_base/backend.html.twig
@@ -42,7 +42,7 @@
 
 {% block javascripts %}
     <!-- jQuery 2.0.2 -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="{{ app.asset_path }}/js/jquery.min.js"></script>
     <!-- jQuery UI 1.10.3 -->
     <script src="{{ app.asset_path }}/js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
     <!-- Bootstrap -->
@@ -69,7 +69,7 @@
 
     <script type="text/javascript">
         $(function() {
-            $(".textarea").wysihtml5();
+            //$(".textarea").wysihtml5();
         });
     </script>
 
