--- a/web/resources/css/AdminLTE.css
+++ b/web/resources/css/AdminLTE.css
@@ -1325,6 +1325,7 @@ body > .header .logo .icon {
   padding: 5px 10px 5px 5px;
 }
 .box .box-body {
+  overflow: scroll;
   padding: 10px;
   -webkit-border-top-left-radius: 0;
   -webkit-border-top-right-radius: 0;
