--- a/web/views/ag_header.html.twig
+++ b/web/views/ag_header.html.twig
@@ -1,5 +1,5 @@
 <header class="header">
-    <a href="" class="logo">Admin Generator</a>
+    <a href="" class="logo">奇点产品库</a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top" role="navigation">
 
