--- a/web/views/ag_menu.html.twig
+++ b/web/views/ag_menu.html.twig
@@ -13,7 +13,7 @@
             
             <li {% if option is defined and option == 'dasboard' %}class="active"{% endif %}>
                 <a href="{{ path('dashboard') }}">
-                    <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+                    <i class="fa fa-dashboard"></i> <span>大盘</span>
                 </a>
             </li>
 
