--- a/web/views/product/create.html.twig
+++ b/web/views/product/create.html.twig
@@ -11,7 +11,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    Create Product
+                    录入新产品
                 </h1>
             </section>
 
