--- a/web/views/product/edit.html.twig
+++ b/web/views/product/edit.html.twig
@@ -11,7 +11,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    Edit Product {{ id }}
+                    修改产品 {{ id }}
                 </h1>
             </section>
 
