add brand and boom

--- a/web/views/boom/list.html.twig
+++ b/web/views/boom/list.html.twig
@@ -7,10 +7,10 @@
     <!-- page script -->
     <script type="text/javascript">
         $(function() {
-            $("#product_list").dataTable({
+            $("#boom_list").dataTable({
 				serverSide: true,
 				ajax: {
-				    "url": "product/list",
+				    "url": "boom/list",
                     "type": "POST"
 				},
 				columns: [
@@ -24,7 +24,7 @@
 					}
 				],
 				rowCallback: function( row, data ) {
-					var actions = '<a href="product/edit/' + data.{{primary_key}} + '" class="btn btn-primary btn-xs">Edit</a> <a href="product/delete/' + data.{{primary_key}} + '" onclick="return confirm_delete();" class="btn btn-danger btn-xs">Delete</a>';
+					var actions = '<a href="boom/edit/' + data.{{primary_key}} + '" class="btn btn-primary btn-xs">Edit</a> <a href="boom/delete/' + data.{{primary_key}} + '" onclick="return confirm_delete();" class="btn btn-danger btn-xs">Delete</a>';
 					$('td:eq({{ table_columns|length }})', row).html( actions );
 				}
 			});
@@ -43,14 +43,14 @@
 
     <div class="wrapper row-offcanvas row-offcanvas-left">
 
-        {% include 'menu.html.twig' with {'option': 'product_list'} %}
+        {% include 'menu.html.twig' with {'option': 'boom_list'} %}
 
         <!-- Right side column. Contains the navbar and content of the page -->
         <aside class="right-side">                
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    Product list
+                    Boom list
                 </h1>
             </section>
 
@@ -68,12 +68,12 @@
                             </div><!-- /.box-header -->
 
                             <div class="box-body table-responsive">
-                                <a class="btn btn-primary" href="{{ path('product_create') }}">Create new product</a>
+                                <a class="btn btn-primary" href="{{ path('boom_create') }}">Create new boom</a>
 <!--
-<a class="btn btn-primary" href="{{ path('product_downloadList') }}">Download list of product as PDF</a>
+<a class="btn btn-primary" href="{{ path('boom_downloadList') }}">Download list of boom as PDF</a>
 -->
                                 <br /><br />
-                                <table id="product_list" class="table table-bordered table-striped">
+                                <table id="boom_list" class="table table-bordered table-striped">
                                     <thead>
                                         <tr>
                                             {% for table_column in table_columns %}
