--- a/web/views/boom/create.html.twig
+++ b/web/views/boom/create.html.twig
@@ -4,14 +4,14 @@
 
     <div class="wrapper row-offcanvas row-offcanvas-left">
 
-        {% include 'menu.html.twig' with {'option': 'category_create'} %}
+        {% include 'menu.html.twig' with {'option': 'boom_create'} %}
 
         <!-- Right side column. Contains the navbar and content of the page -->
         <aside class="right-side">                
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    Create Category
+                    Create Boom
                 </h1>
             </section>
 
@@ -33,23 +33,18 @@
                                 <div class="box-body">
 
 									<div class='form-group'>
-									    {{ form_label(form.id) }}
-									    {{ form_widget(form.id, { attr: { 'class': 'form-control' }}) }}
-									</div>
-
-									<div class='form-group'>
 									    {{ form_label(form.name) }}
 									    {{ form_widget(form.name, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
 									<div class='form-group'>
-									    {{ form_label(form.gmt_create) }}
-									    {{ form_widget(form.gmt_create, { attr: { 'class': 'form-control' }}) }}
+									    {{ form_label(form.code) }}
+									    {{ form_widget(form.code, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
 									<div class='form-group'>
-									    {{ form_label(form.gmt_modified) }}
-									    {{ form_widget(form.gmt_modified, { attr: { 'class': 'form-control' }}) }}
+									    {{ form_label(form.product_id) }}
+									    {{ form_widget(form.product_id, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
                                                   
