--- a/web/views/product/create.html.twig
+++ b/web/views/product/create.html.twig
@@ -11,7 +11,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    录入新产品
+                    Create Product
                 </h1>
             </section>
 
@@ -120,6 +120,16 @@
 									<div class='form-group'>
 									    {{ form_label(form.memo) }}
 									    {{ form_widget(form.memo, { attr: { 'class': 'form-control textarea', 'style': 'width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.brand_id) }}
+									    {{ form_widget(form.brand_id, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.code) }}
+									    {{ form_widget(form.code, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
                                                   
