--- a/web/views/provider/edit.html.twig
+++ b/web/views/provider/edit.html.twig
@@ -62,6 +62,36 @@
 									    {{ form_widget(form.phone, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
+									<div class='form-group'>
+									    {{ form_label(form.background) }}
+									    {{ form_widget(form.background, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.technology) }}
+									    {{ form_widget(form.technology, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.capacity) }}
+									    {{ form_widget(form.capacity, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.price) }}
+									    {{ form_widget(form.price, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.net) }}
+									    {{ form_widget(form.net, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.service) }}
+									    {{ form_widget(form.service, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
                                                  
 
                                 </div><!-- /.box-body -->
