--- a/web/views/menu.html.twig
+++ b/web/views/menu.html.twig
@@ -17,7 +17,7 @@
 <li class="treeview {% if option is defined and (option == 'boom_list' or option == 'boom_create' or option == 'boom_edit') %}active{% endif %}">
     <a href="#">
         <i class="fa fa-folder-o"></i>
-        <span>Boom</span>
+        <span>产品配件</span>
         <i class="fa pull-right fa-angle-right"></i>
     </a>
     <ul class="treeview-menu" style="display: none;">
