add more columns to trademark

--- a/web/views/trademark/create.html.twig
+++ b/web/views/trademark/create.html.twig
@@ -42,6 +42,46 @@
 									    {{ form_widget(form.logo, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
+									<div class='form-group'>
+									    {{ form_label(form.number) }}
+									    {{ form_widget(form.number, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.owner) }}
+									    {{ form_widget(form.owner, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.category) }}
+									    {{ form_widget(form.category, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.apply_date) }}
+									    {{ form_widget(form.apply_date, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.publish_date) }}
+									    {{ form_widget(form.publish_date, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.register_date) }}
+									    {{ form_widget(form.register_date, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.scope) }}
+									    {{ form_widget(form.scope, { attr: { 'class': 'form-control textarea', 'style': 'width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;' }}) }}
+									</div>
+
+									<div class='form-group'>
+									    {{ form_label(form.status) }}
+									    {{ form_widget(form.status, { attr: { 'class': 'form-control' }}) }}
+									</div>
+
                                                   
 
                                 </div><!-- /.box-body -->
