--- a/web/views/trademark/create.html.twig
+++ b/web/views/trademark/create.html.twig
@@ -40,6 +40,15 @@
 									<div class='form-group'>
 									    {{ form_label(form.logo) }}
 									    {{ form_widget(form.logo, { attr: { 'class': 'form-control' }}) }}
+									    {% if form.vars.value.logo|length > 0 %}
+									    <div>
+									    	{% for img in form.vars.value.logo|split(',') %}
+									    	<a target='__blank' href='/resources/files/{{img}}'>
+									    		<img style='width:400px;' class='img-responsive' src='/resources/files/{{img}}'/>
+									    	</a>
+									    	{% endfor %}
+									    </div>
+									    {% endif %}
 									</div>
 
 									<div class='form-group'>
