--- a/web/views/product/edit.html.twig
+++ b/web/views/product/edit.html.twig
@@ -54,7 +54,7 @@
 
 									<div class='form-group'>
 									    {{ form_label(form.category2) }}
-									    {{ form_widget(form.category2, { attr: { 'class': 'form-control' }}) }}
+									    {{ form_widget(form.category2, { attr: { 'class': 'form-control textarea', 'placeholder': '例如：瓶口： 20cm 泵头：压力泵', 'style': 'width: 100%; height: 200px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;' }}) }}
 									</div>
 
 									<div class='form-group'>
