set header wider for product list

--- a/web/views/product/list.html.twig
+++ b/web/views/product/list.html.twig
@@ -77,7 +77,7 @@
                                     <thead>
                                         <tr>
                                             {% for table_column in table_label_columns %}
-                                            <th class="text-nowrap">{{ table_column }}</th>
+                                            <th class="text-nowrap" style="min-width:80px;">{{ table_column }}</th>
                                             {% endfor %}
                                             <th>Actions</th>
                                         </tr>
