update product pages

--- a/web/views/product/edit.html.twig
+++ b/web/views/product/edit.html.twig
@@ -11,7 +11,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    Edit Product {{ id }}
+                    修改产品 {{ id }}
                 </h1>
             </section>
 
@@ -138,7 +138,7 @@
                                 {{ form_rest(form) }}
 
                                 <div class="box-footer">
-                                    <button type="submit" class="btn btn-primary">Edit</button>
+                                    <button type="submit" class="btn btn-primary">保存</button>
                                 </div>
 
                             </div><!-- /.box -->
