--- a/web/views/category/edit.html.twig
+++ b/web/views/category/edit.html.twig
@@ -33,23 +33,13 @@
                                 <div class="box-body">
 
 									<div class='form-group'>
-									    {{ form_label(form.id) }}
-									    {{ form_widget(form.id, { attr: { 'class': 'form-control' }}) }}
+									    {{ form_label(form.code) }}
+									    {{ form_widget(form.code, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
 									<div class='form-group'>
 									    {{ form_label(form.name) }}
 									    {{ form_widget(form.name, { attr: { 'class': 'form-control' }}) }}
-									</div>
-
-									<div class='form-group'>
-									    {{ form_label(form.gmt_create) }}
-									    {{ form_widget(form.gmt_create, { attr: { 'class': 'form-control' }}) }}
-									</div>
-
-									<div class='form-group'>
-									    {{ form_label(form.gmt_modified) }}
-									    {{ form_widget(form.gmt_modified, { attr: { 'class': 'form-control' }}) }}
 									</div>
 
                                                  
