update product list pages language file url

--- a/web/views/product/list.html.twig
+++ b/web/views/product/list.html.twig
@@ -9,7 +9,7 @@
         $(function() {
             $("#product_list").dataTable({
                 language: {
-                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/Chinese.json"
+                    "url": "//cdn.datatables.net/plug-ins/1.10.20/i18n/Chinese.json"
                 },
 				serverSide: true,
 				ajax: {
