--- a/web/views/product/list.html.twig
+++ b/web/views/product/list.html.twig
@@ -7,9 +7,13 @@
     <!-- page script -->
     <script type="text/javascript">
         $(function() {
+            var langauages = {
+                "en-US": "English",
+                "zh-CN": "Chinese"
+            };
             $("#product_list").dataTable({
                 language: {
-                    "url": "//cdn.datatables.net/plug-ins/1.10.20/i18n/Chinese.json"
+                    "url": "//cdn.datatables.net/plug-ins/1.10.20/i18n/"+langauages[navigator.language]+".json"
                 },
 				serverSide: true,
 				ajax: {
